syntax = "proto3";

package cmd.vchsd.api;

message Assignment {
	string name = 1;

	int64 time = 2;
	string description = 3;
	bool missing = 4;
	bool submitted = 5;
	float scored = 6;
	float total = 7;
	string assignment_type_name = 8;
}

message CourseMeeting {
	int64 start_time = 1;
	int64 end_time = 2;
}

message AssignmentType {
	string name = 1;
	float weight = 2;
}

message GradeSnapshot {
	int64 time = 1;
	float value = 2;
}

message Course {
	string name = 1;

	float overall_grade = 2;
	string teacher = 3;
	string teacher_email = 4;
	string remote_meeting_link = 5;
	string room = 6;
	string day_name = 7;
	int32 homework_passes = 8;

	repeated CourseMeeting meetings = 9;
	repeated AssignmentType assignment_types = 10;
	repeated Assignment assignments = 11;
	repeated GradeSnapshot snapshots = 12;
}

message StudentData {
	float gpa = 1;
	repeated string day_names = 2;
	repeated Course courses = 3;
}

